# pygame_samples

./: README.md  axis_flat.py  demo_01.py  demo_03 .py  demo_03.py  demo_04.py  demo_06.py  demo_07.py  demo_LCD_font.py  kadai_01.py  lcd_font_mc.py  lcd_font_mc_02.py  lcd_font_pg.py  param_MCJE.py  param_mc_remote.py  pyproject.toml
examples/: demo_00_ja.ipynb
mcje/: connection.py  event.py  minecraft.py  util.py  vec3.py
