[project]
name = "pygame-samples-19"
version = "0.1.0"
description = ""
authors = [
    {name = "sho815492",email = "187017041+sho815492@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
